--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # Generate by system
-.DS_Store
-.vsconfig
+*.DS_Store
+*.vsconfig
